exampleingress.yml
apiVersion: v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-world-docker.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-world-docker
                port:
                  number: 8080
